# preparacion-entorno-python

./: README.md  cookiecutter.json
preparacion-entorno-python/: README.md  cookiecutter.json
preparacion-entorno-python/{{ cookiecutter.project_slug }}/: pyproject.toml
preparacion-entorno-python/{{ cookiecutter.project_slug }}/src/test/: test_proba.py
{{ cookiecutter.project_slug }}/: README.md  ayuda  pyproject.toml
{{ cookiecutter.project_slug }}/src/test/: test_proba.py
